src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Concern__c</fullName>
        <label>Appointment Concern</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appointment_Day_Segment__c</fullName>
        <label>Appointment Day Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CO_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Header</label>
        <referenceTo>CO_Header__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Owned_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Owned Unit</label>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Scheduling_Count__c</fullName>
        <label>Event Scheduling Count</label>
        <summaryForeignKey>Event_Scheduling__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_MultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-Party</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Event__c</fullName>
        <label>Old Event</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Job_Type__c</fullName>
        <formula>TEXT(Service_Order_Header__r.Transaction_Type__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Technician__c.Type__c</field>
                <operation>equals</operation>
                <value>Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Technician__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_In_DateTime__c</fullName>
        <label>Due In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_In_Time__c</fullName>
        <label>Due In Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promised_By_DateTime__c</fullName>
        <label>Promised By DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Promised_By_Time__c</fullName>
        <label>Promised By Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Scheduled__c</fullName>
        <label>Total Hours Scheduled</label>
        <summarizedField>Event_Scheduling__c.Hours__c</summarizedField>
        <summaryForeignKey>Event_Scheduling__c.Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Type</label>
        <referenceTo>Transaction_Type__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Arrived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Arrived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Location__c</fullName>
        <description>This field is used to hold the location of the unit on the store property</description>
        <label>Unit Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Estimated_Hours__c</columns>
        <columns>Start_DateTime__c</columns>
        <columns>End_DateTime__c</columns>
        <columns>Is_MultiDay__c</columns>
        <columns>CO_Header__c</columns>
        <columns>Service_Order_Header__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>